# swadeshlabs

./: README.md
cmd/server/: main.go
dashboard/: .gitignore  DesignDoc.md  PRD.md  README.md  TechStack.md  checkCriticalFault_fixed.js  go.mod  go.sum  test_button.html
dashboard/cmd/server/: main.go
dashboard/internal/database/: db.go
dashboard/internal/handlers/: alerts.go  predictions.go  routes.go  sse.go
dashboard/internal/models/: prediction.go
dashboard/internal/mqtt/: client.go
dashboard/public/css/: style.css
dashboard/public/js/: app.js  (+2 more)
dashboard/schematics/: swadeshlabs.kicad_pro  swadeshlabs.kicad_sch
dashboard/views/: index.html  status_card.html  work_order_modal.html
esp32/acc_test/: .comp.py.swp  acc_test.ino  comp.py  csv_cap.py  datalog.py  fault.csv  go.mod  healthy.csv  main.go  plot.py
esp32/accous_test/: accous_test.ino
esp32/ct_test/: ct_test.ino
esp32/main/: .main.ino.swp  main.ino
esp32/model/: README.txt
esp32/model/edgemodel/components/edge_impulse/: CMakeLists.txt
esp32/model/edgemodel/components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
esp32/model/edgemodel/components/edge_impulse/tflite-model/: tflite_learn_892858_3_compiled.cpp
esp32/temp_test.ino/: temp_test.ino.ino
internal/database/: db.go
internal/models/: prediction.go
libraries/: ESP32_S3_WROOM_1_N16R8.kicad_sym
schematics/: modules.bak  swadeshlabs.kicad_prl  swadeshlabs.kicad_pro  swadeshlabs.kicad_sch  sym-lib-table  ~swadeshlabs.kicad_sch.lck
simple_webapp/: go.mod  main.go
simple_webapp/static/: index.html
(+52 files in other folders)
